# HeLpER

./: .gitignore  .prettierignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  EVALUATION_REPORT.md  KEYWORDS.md  README.md  REFOCUS_PLAN.md  SECURITY.md  SPEC_SHEET.md  assemble-windows.bat  build-windows.bat  claude.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  readme.md  security-config.json  startup-windows.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: USER_GUIDE.md
e2e/: app.spec.ts
scripts/: security-integration.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  natlangchain.rs  ollama.rs  tray.rs  weather.rs
src/components/: Calendar.svelte  ChatPanel.svelte  DateNav.svelte  FirstRunWizard.svelte  JournalContext.svelte  NoteEditor.svelte  NotesList.svelte  PublishPanel.svelte  SettingsPanel.svelte  StatusBar.svelte  TitleBar.svelte  ToastContainer.svelte  WeatherBadge.svelte
src/lib/: constants.ts  index.ts  types.ts
src/lib/services/: export.ts  index.ts  natlangchain.ts  stt.ts  tauri.ts  weather.ts
src/lib/stores/: chat.ts  index.ts  notes.ts  settings.ts  stt.ts  ui.ts  (+1 more)
tests/: constants.test.ts  setup.ts  types.test.ts
tests/services/: natlangchain.test.ts  tauri.test.ts  weather.test.ts
tests/stores/: chat.test.ts  notes.test.ts  settings.test.ts  ui.test.ts  weather.test.ts
tests/utils/: date.test.ts  note.test.ts
(+4 files in other folders)
