[package]
name = "helper"
version = "0.1.0"
description = "Helpful Lightweight Personal Everyday Recorder"
authors = ["HeLpER Team"]
edition = "2021"

[lib]
name = "helper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
